# Kpp

./: CMakeLists.txt  Readme.md  usage.bash
src/: generator.hpp  main.cpp  parser.hpp  tokenstore.hpp
tests/: test.kat
